# kvault-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-python-and-uv-package.md  0002-kernel-has-zero-plugins.md  0003-kind-first-plugin-directories.md  0004-retriever-as-unifying-contract.md  0005-state-in-vault-not-kernel.md  0006-three-discovery-paths-with-precedence.md  0007-events-plus-registry-dual-model.md  0008-versioned-embedding-collections.md  0009-fastmcp-3-with-custom-provider.md
docs/concepts/: audits.md  config.md  consolidation.md  events.md  kernel.md  manifests.md  plugins.md  retrieval.md  rules.md  service-registry.md  state.md  vault.md
docs/development/: adding-a-plugin.md  external-apis.md  testing.md
src/kvault_mcp/: server.py
src/kvault_mcp/core/: __init__.py  config.py  discovery.py  eventbus.py  kernel.py  lifecycle.py  logger.py  registry.py  secrets.py  state.py
src/kvault_mcp/kinds/: __init__.py  _base.py  _registry.py  _types.py  audit.py  embedding.py  manifest_builder.py  retriever.py  rule_injector.py  rule_store.py  text_index.py  vector_store.py
src/kvault_mcp/plugins/audit/broken_wikilinks/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/audit/lineage_dangling/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/audit/schemas/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/embedding/ollama/: client.py  handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/manifest_builder/capabilities/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/manifest_builder/frameworks/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/manifest_builder/lineage/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/retriever/fts_only/: handler.py  plugin.toml
src/kvault_mcp/plugins/retriever/hybrid_rrf/: handler.py  merge.py  plugin.toml  rrf.py  schema.json
src/kvault_mcp/plugins/rules/injector/markdown_markers/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/rules/store/markdown/: handler.py  plugin.toml  schema.json
src/kvault_mcp/plugins/text_index/fts5/: handler.py  hashing.py  indexer.py  plugin.toml  query.py  schema.json  store.py
src/kvault_mcp/plugins/vector_store/sqlite_vec/: collections.py  connection.py  handler.py  plugin.toml  schema.json  serialization.py
src/kvault_mcp/testing/: __init__.py  tempvault.py
src/kvault_mcp/vault/: __init__.py  frontmatter.py  jsonl.py  markdown.py  wikilinks.py
tests/: conftest.py  test_adversarial.py  test_config.py  test_discovery.py  test_eventbus.py  test_kernel.py  test_plugin_audits.py  test_plugin_fts5_text_index.py  test_plugin_fts_only_retriever.py  test_plugin_hybrid_rrf.py  test_plugin_manifests.py  test_plugin_ollama.py  test_plugin_rules.py  test_plugin_sqlite_vec.py  test_registry.py  test_rrf.py  test_state.py  test_tempvault.py  test_vault_primitives.py
tests/fixtures/toy_plugin/: handler.py  plugin.toml  schema.json
